--- a/build-apk-ipa-desktop.yml
+++ b/build-apk-ipa-desktop.yml
@@ -35,6 +35,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install Android SDK Platform-Tools
+      run: sdkmanager "platform-tools"
+
+    - name: Install ninja
+      run: sudo apt-get install ninja-build
+
+    - name: Install GTK 3.0 Development Libraries
+      run: sudo apt-get install libgtk-3-dev
+
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
       uses: subosito/flutter-action@v2
       with:
@@ -53,57 +62,15 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
-    - name: Flet Build APK
+    - name: Flutter Build APK
       run: |
         flutter config --no-analytics
-        flet build apk --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
+        flutter build apk --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
 
     - name: Upload APK Artifact
       uses: actions/upload-artifact@v4.3.4
       with:
         name: apk-build-artifact
         path: build/apk
-        if-no-files-found: warn
-        overwrite: false
-
-  build-aab:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Install Python Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
-      with:
-        api-levels: 33
-        build-tools: '35.0.0'
-        ndk: '21.4.7075529'
-
-    - name: Flet Build AAB
-      run: |
-        flutter config --no-analytics
-        flet build aab --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
-
-    - name: Upload AAB Artifact
-      uses: actions/upload-artifact@v4.3.4
-      with:
-        name: aab-build-artifact
-        path: build/aab
         if-no-files-found: warn
         overwrite: false
