--- a/build-apk-ipa-desktop.yml
+++ b/build-apk-ipa-desktop.yml
@@ -39,10 +39,10 @@ jobs:
       run: sdkmanager "platform-tools"
 
     - name: Install ninja
-      run: sudo apt-get install ninja-build
+      run: sudo apt-get install -y ninja-build
 
     - name: Install GTK 3.0 Development Libraries
-      run: sudo apt-get install libgtk-3-dev
+      run: sudo apt-get install -y libgtk-3-dev
 
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
       uses: subosito/flutter-action@v2
