--- a/build-apk-ipa-desktop.yml
+++ b/build-apk-ipa-desktop.yml
@@ -46,6 +46,15 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
+    - name: Install Android SDK and necessary tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y android-sdk adb
+
+    - name: Install Linux development dependencies (ninja, GTK)
+      run: |
+        sudo apt-get install -y ninja-build libgtk-3-dev
+
     - name: Flet Build APK
       run: |
         flutter config --no-analytics
