--- a/build-apk-ipa-desktop.yml
+++ b/build-apk-ipa-desktop.yml
@@ -35,6 +35,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install Linux Build Tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ninja-build build-essential cmake libgtk-3-dev
+
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
       uses: subosito/flutter-action@v2
       with:
@@ -46,14 +51,9 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
-    - name: Install Android SDK and necessary tools
+    - name: Install Android SDK and Tools
       run: |
-        sudo apt-get update
         sudo apt-get install -y android-sdk adb
-
-    - name: Install Linux development dependencies (ninja, GTK)
-      run: |
-        sudo apt-get install -y ninja-build libgtk-3-dev
 
     - name: Flet Build APK
       run: |
