--- a/build-apk-ipa-desktop.yml
+++ b/build-apk-ipa-desktop.yml
@@ -35,11 +35,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install Linux Build Tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ninja-build build-essential cmake libgtk-3-dev
-
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
       uses: subosito/flutter-action@v2
       with:
@@ -51,9 +46,18 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
-    - name: Install Android SDK and Tools
+    - name: Install Android SDK
       run: |
+        sudo apt-get update
         sudo apt-get install -y android-sdk adb
+
+    - name: Install Required Packages
+      run: |
+        sudo apt-get install -y libstdc++-12-dev ninja-build build-essential cmake libgtk-3-dev
+
+    - name: Run Flutter Doctor
+      run: |
+        flutter doctor -v
 
     - name: Flet Build APK
       run: |
