--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,14 +55,20 @@ jobs:
       run: |
         sudo apt-get install -y libstdc++-12-dev ninja-build build-essential cmake libgtk-3-dev
 
+    - name: Accept Android SDK licenses
+      run: |
+        yes | sdkmanager --licenses
+
+    - name: Install Required NDK
+      run: |
+        sudo -E sdkmanager --install "ndk;23.1.7779620"
+
     - name: Run Flutter Doctor
       run: |
         flutter doctor -v
 
     - name: Flet Build APK
       run: |
-        sdkmanager --licenses -y
-        sudo -E sdkmanager --install "ndk;23.1.7779620"
         flutter config --no-analytics
         flet build apk
 
