--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,10 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Install Python Dependencies
+    - name: Upgrade pip and Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install meson Cython  # Install Meson and Cython for dependencies
         pip install -r requirements.txt
 
     - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
